# lib

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  flake.nix  refactor_filters.patch  result
.github/workflows/: docs.yml  publish-rest-docker.yml
app/: Cargo.toml
app/src/: lib.rs  nwc.rs  wallet.rs
assets/: fiatUnits.json
backend/: package-lock.json  package.json
backend/public/: dashboard.html
backend/src/: index.ts
business_app/src/: wallet.rs
cli/: Cargo.toml  run
cli/src/: lib.rs  main.rs
crates/portal/: Cargo.toml  README.md
crates/portal-app/: Cargo.toml  README.md
crates/portal-app-demo/: Cargo.toml  README.md  example.config.toml
crates/portal-app-demo/src/: config.rs  constants.rs  error.rs  index.html  main.rs
crates/portal-app/src/: lib.rs  nwc.rs  runtime.rs  wallet.rs
crates/portal-cli/: Cargo.toml  README.md
crates/portal-cli/src/: lib.rs
crates/portal-fetch-git-hash/: Cargo.toml
crates/portal-macros/: Cargo.toml  README.md
crates/portal-macros/src/: lib.rs
crates/portal-rates/: Cargo.toml  README.md
crates/portal-rates/assets/: fiatUnits.json
crates/portal-rates/src/: lib.rs
crates/portal-rest/: Cargo.toml  README.md  example.config.toml  openapi.yaml
crates/portal-rest/clients/ts/: README.md  example.ts  package-lock.json  package.json  tsconfig.json
crates/portal-rest/clients/ts/src/: client.ts  errors.ts  index.ts  types.ts  webhook.ts
crates/portal-rest/src/: command.rs  config.rs  constants.rs  events.rs  handlers.rs  main.rs  response.rs  webhook.rs  ws.rs
crates/portal-sdk/: Cargo.toml  README.md
crates/portal-sdk/src/: lib.rs
crates/portal-wallet/: Cargo.toml  README.MD
crates/portal-wallet/src/: breez.rs  lib.rs  nwc.rs
crates/portal/src/: lib.rs  profile_service.rs  utils.rs
crates/portal/src/conversation/: cashu.rs  close_subscription.rs  invoice.rs  profile.rs
crates/portal/src/conversation/app/: payments.rs
crates/portal/src/conversation/sdk/: auth.rs  payments.rs
crates/portal/src/protocol/: calendar.rs  identity.rs  key_handshake.rs  model.rs  subkey.rs
crates/portal/src/router/: actor.rs  channel.rs  filters.rs  ids.rs  mod.rs
crates/portal/src/router/adapters/: multi_key_listener.rs
crates/portal/src/test_framework/: mod.rs
crates/portal/src/test_framework/tests/: auth_scenario.rs
docs/: .gitignore  README.md  SETUP.md  SUMMARY.md  book.toml  package-lock.json  tabs.js
docs/advanced/: docker-deployment.md  environment-variables.md  how-it-works.md  relays.md  running-a-mint.md  troubleshooting.md
docs/age-verification/: api-reference.md  getting-started.md  integration-guide.md
docs/getting-started/: building-from-source.md  docker-deployment.md  environment-variables.md  quick-start.md  versioning.md
docs/guides/: age-verification.md  authentication.md  cashu-tokens.md  jwt-tokens.md  profiles.md  recurring-payments.md  relays.md  running-a-mint.md  single-payments.md  static-tokens.md
docs/introduction/: what-is-lightning.md  what-is-nostr.md
docs/platform/: cashu-tokens.md  getting-started.md  jwt-tokens.md  recurring-payments.md  static-tokens.md
docs/resources/: contributing.md  faq.md  glossary.md  troubleshooting.md  versioning.md
docs/sdk/: api-reference-rest.md  api-reference.md  basic-usage.md  configuration.md  error-handling.md  installation.md  java.md  javascript.md  rest-api.md
examples/: .env.example  README.md  age-verification.js  auth.js  error-handling.js  package-lock.json  package.json  profile.js  single-payment.js
fetch-git-hash/: Cargo.toml
fetch-git-hash/src/: lib.rs
rates/src/: lib.rs
react-native/: .gitignore  flake.nix  package.json  result  ubrn.config.yaml
rest/: Cargo.toml  README.md  example.config.toml  module.nix
rest/clients/ts/: package.json
rest/clients/ts/src/: client.ts  types.ts
rest/data/mainnet/66924265/: storage.sql
rest/src/: command.rs  config.rs  main.rs  response.rs  ws.rs
rest/src/wallets/: breez.rs  mod.rs  nwc.rs
sdk/src/: lib.rs
src/: close_subscription.rs  invoice.rs  lib.rs  nip46.rs  profile.rs  signing.rs  utils.rs
src/app/: auth.rs  payments.rs
src/conversation/: cashu.rs  close_subscription.rs  invoice.rs  mod.rs  profile.rs
src/conversation/app/: auth.rs  payments.rs
src/conversation/sdk/: auth.rs  payments.rs
src/protocol/: calendar.rs  key_handshake.rs  model.rs
src/router/: actor.rs  channel.rs  conversation.rs  filter_merge.rs  filters.rs  ids.rs  mod.rs  node.rs  notification.rs  response.rs  state.rs
src/router/adapters/: multi_key_listener.rs  multi_key_sender.rs  one_shot.rs
src/router/conversation/: message.rs  mod.rs  response.rs
src/router/conversation/adapters/: multi_key_listener.rs  multi_key_sender.rs  one_shot.rs
src/sdk/: auth.rs  payments.rs
src/test_framework/: mod.rs
src/test_framework/tests/: auth_scenario.rs
wallet/: Cargo.toml
wallet/src/: breez.rs  lib.rs  nwc.rs
