[workspace]
resolver = "1"
members = [ "crates/portal-app" , "crates/portal-cli", "crates/portal-rest", "crates/portal-sdk", "crates/portal-rates", "crates/portal-macros", "crates/portal-wallet"]

[workspace.dependencies]
# Core dependencies
nostr = { git = "https://github.com/rust-nostr/nostr.git", rev = "36cc4bbf921044527b03b7e63bf7113d60ac935b" , features = ["nip44", "nip46"] }
nostr-relay-pool = { git = "https://github.com/rust-nostr/nostr.git", rev = "36cc4bbf921044527b03b7e63bf7113d60ac935b" }
nwc = { git = "https://github.com/rust-nostr/nostr.git", rev = "36cc4bbf921044527b03b7e63bf7113d60ac935b" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
rand = "0.8"
sha2 = "0.10"
thiserror = "1.0"
base64 = "0.21"
tokio = { version = "1.36", features = ["full", "test-util"] }
urlencoding = "2.1.3"
log = "0.4.27"
env_logger = "0.11.8"
tokio-stream = "0.1.17"
futures = "0.3.31"
uniffi = "0.29.1"
anyhow = "1.0.98"
chrono = "0.4.40"
chrono-tz = { version = "0.10.3", features = ["serde"] }
derive-new = "0.7.0"
jwt-compact = { version = "0.9.0-beta.1", features = ["es256k"] }
secp256k1 = "0.29"
cdk = { git = "https://github.com/PortalTechnologiesInc/cdk", rev = "949c2901b0c7ed1c967f537b1997bff2cc55b696" }
reqwest = { version = "0.12.20", default-features = false, features = ["rustls-tls"] }

# Additional dependencies used across workspace
async-trait = "0.1.88"
bip39 = { version = "2.2.0", features = ["rand"] }
bitcoin = "0.32.5"
nostrstore = "0.43.0"
async-utility = "0.3.1"
cdk-common = { git = "https://github.com/PortalTechnologiesInc/cdk", rev = "949c2901b0c7ed1c967f537b1997bff2cc55b696" }
cdk-sqlite = { git = "https://github.com/PortalTechnologiesInc/cdk", rev = "949c2901b0c7ed1c967f537b1997bff2cc55b696" }
axum = { version = "0.6", features = ["ws"] }
tower-http = { version = "0.4", features = ["cors", "trace"] }
bitflags = "2.10.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
dotenv = "0.15"
console-subscriber = "0.4.1"
dashmap = "6.1.0"
android_logger = "0.15.0"
async = "0.0.0"


breez-sdk-spark = { git = "https://github.com/breez/spark-sdk", tag = "0.7.18" }

[patch.crates-io]
nostr-sdk = { git = "https://github.com/rust-nostr/nostr.git", rev = "36cc4bbf921044527b03b7e63bf7113d60ac935b" }
