[workspace]
resolver = "1"
members = [ "crates/portal-app" , "crates/portal-app-demo", "crates/portal-cli", "crates/portal-rest", "crates/portal-sdk", "crates/portal-rates", "crates/portal-macros", "crates/portal-wallet"]

[workspace.dependencies]
# -----------------------------------------------------------------------------
# Nostr / protocol
# -----------------------------------------------------------------------------
nostr = { git = "https://github.com/rust-nostr/nostr.git", rev = "36cc4bbf921044527b03b7e63bf7113d60ac935b", features = ["nip44", "nip46"] }
nostr-relay-pool = { git = "https://github.com/rust-nostr/nostr.git", rev = "36cc4bbf921044527b03b7e63bf7113d60ac935b" }
nostrstore = "0.43.0"
nwc = { git = "https://github.com/rust-nostr/nostr.git", rev = "36cc4bbf921044527b03b7e63bf7113d60ac935b" }

# -----------------------------------------------------------------------------
# Serialization & data
# -----------------------------------------------------------------------------
base64 = "0.21"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1.3"
uuid = { version = "1.17", features = ["v4", "serde"] }

# -----------------------------------------------------------------------------
# Async runtime & concurrency
# -----------------------------------------------------------------------------
async-trait = "0.1.88"
async-utility = "0.3.1"
futures = "0.3.31"
tokio = { version = "1.36", features = ["full", "test-util"] }
tokio-stream = "0.1.17"

# -----------------------------------------------------------------------------
# Crypto / keys
# -----------------------------------------------------------------------------
bip39 = { version = "2.2.0", features = ["rand"] }
bitcoin = "0.32.5"
jwt-compact = { version = "0.9.0-beta.1", features = ["es256k"] }
secp256k1 = "0.29"
sha2 = "0.10"

# -----------------------------------------------------------------------------
# Error handling & logging
# -----------------------------------------------------------------------------
anyhow = "1.0.98"
env_logger = "0.11.8"
log = "0.4.27"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console-subscriber = "0.4.1"

# -----------------------------------------------------------------------------
# Time & utilities
# -----------------------------------------------------------------------------
chrono = "0.4.40"
chrono-tz = { version = "0.10.3", features = ["serde"] }
derive-new = "0.7.0"
rand = "0.8"

# -----------------------------------------------------------------------------
# HTTP client & server
# -----------------------------------------------------------------------------
axum = { version = "0.6", features = ["ws"] }
reqwest = { version = "0.12.20", default-features = false, features = ["rustls-tls"] }
tower-http = { version = "0.4", features = ["cors", "trace"] }

# -----------------------------------------------------------------------------
# CDK / Cashu wallet
# -----------------------------------------------------------------------------
cdk = { git = "https://github.com/PortalTechnologiesInc/cdk", rev = "949c2901b0c7ed1c967f537b1997bff2cc55b696" }
cdk-common = { git = "https://github.com/PortalTechnologiesInc/cdk", rev = "949c2901b0c7ed1c967f537b1997bff2cc55b696" }
cdk-sqlite = { git = "https://github.com/PortalTechnologiesInc/cdk", rev = "949c2901b0c7ed1c967f537b1997bff2cc55b696" }

# -----------------------------------------------------------------------------
# Lightning / payments
# -----------------------------------------------------------------------------
lightning-invoice = "0.33.2"

# -----------------------------------------------------------------------------
# FFI / bindings
# -----------------------------------------------------------------------------
uniffi = "0.29.1"

# -----------------------------------------------------------------------------
# Config & system
# -----------------------------------------------------------------------------
config = { version = "0.15.19", features = ["toml"] }
dashmap = "6.1.0"
dirs = "6.0.0"

# -----------------------------------------------------------------------------
# External SDKs
# -----------------------------------------------------------------------------
breez-sdk-spark = { git = "https://github.com/breez/spark-sdk", tag = "0.7.18" }

[patch.crates-io]
nostr-sdk = { git = "https://github.com/rust-nostr/nostr.git", rev = "36cc4bbf921044527b03b7e63bf7113d60ac935b" }
