[package]
name = "portal-app-demo"
version = "0.1.0"
edition = "2024"
description = "Multi-session demo app for protocol testing with actor-based session pool"

[[bin]]
name = "portal-app-demo"
path = "src/main.rs"

[dependencies]
app = { path = "../portal-app", features = [] }
portal-wallet = { path = "../portal-wallet" }
portal = { path = "../portal", features = ["bindings", "profile-service"] }

axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
