[package]
name = "app"
version = "0.4.13"
edition = "2024"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
portal = { path = "../portal", features = ["bindings"] }
portal-macros = { path = "../portal-macros" }
portal-rates = { path = "../portal-rates", features = ["bindings"]}

uniffi = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
log = { workspace = true }
async-trait = { workspace = true }
bip39 = { workspace = true }
bitcoin = { workspace = true }
nwc = { workspace = true }
nostr = { workspace = true }
futures = { workspace = true }

nostrstore = { workspace = true }
nostr-relay-pool = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-utility = { workspace = true }
# nostrstore-derive = "0.1.0"
lightning-invoice = { workspace = true }

chrono = { workspace = true }

cdk = { workspace = true, features = ["wallet"] }
cdk-common = { workspace = true }