[package]
name = "portal-rest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rest"
path = "src/main.rs"

[dependencies]
portal-wallet = { path = "../portal-wallet" }
portal-sdk = { path = "../portal-sdk" }
portal = { version = "0.1.0", path = "../portal" }
portal-rates = { path = "../portal-rates" }

nostr = { workspace = true }

nwc = { workspace = true }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }

console-subscriber = { workspace = true, optional = true }
dashmap = { workspace = true }

chrono = { workspace = true }

cdk = { workspace = true, features = ["wallet"] }
cdk-sqlite = { workspace = true }
rand = { workspace = true }

breez-sdk-spark = { git = "https://github.com/piergiorgies/spark-sdk", rev = "13d7f65fc048897d4332dcaabd6908c941a4cee0"}
dirs = "6.0.0"
config = { version = "0.15.19", features = ["toml"] }

[features]
task-tracing = ["console-subscriber"]
