[package]
name = "portal-rest"
version = "0.4.1"
edition = "2021"

[[bin]]
name = "rest"
path = "src/main.rs"

[dependencies]
portal-wallet = { path = "../portal-wallet" }
portal-sdk = { path = "../portal-sdk" }
portal = { version = "0.1.0", path = "../portal", features = ["profile-service"] }
portal-rates = { path = "../portal-rates" }
portal-macros = { path = "../portal-macros" }

nostr = { workspace = true }

nwc = { workspace = true }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

console-subscriber = { workspace = true, optional = true }
rusqlite = { workspace = true }

chrono = { workspace = true }

cdk = { workspace = true, features = ["wallet"] }
cdk-sqlite = { workspace = true }
rand = { workspace = true }
dirs = { workspace = true }
config = { workspace = true }
lightning-invoice = { workspace = true }
reqwest = { workspace = true }
subtle = "2"
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[features]
task-tracing = ["console-subscriber"]
