[package]
name = "portal"
version = "0.1.0"
edition = "2024"

[dependencies]
nostr = { workspace = true }
nostr-relay-pool = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
urlencoding = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
uniffi = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
derive-new = { workspace = true }
jwt-compact = { workspace = true }
secp256k1 = { workspace = true }
cdk = { workspace = true }
reqwest = { workspace = true }

[features]
default = ["bindings"]
bindings = ["uniffi", "anyhow"]
